--- a/styles/enveloppePage.css
+++ b/styles/enveloppePage.css
@@ -1,3 +1,11 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .main {
   display: flex;
   align-items: center;
