--- a/styles/user.css
+++ b/styles/user.css
@@ -10,7 +10,6 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin: 20px;
 }
 
 #formInscription,
@@ -65,5 +64,27 @@ body {
   position: absolute;
   border-bottom: 2px solid white;
   width: 110%;
-  top: -70px;
+  top: -100px;
+}
+
+#sectionInfosUtilisateur {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.btnDeconnexion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin-top: 20px;
+  background: #ee70a8;
+  padding: 20px;
+  border-radius: 50px;
+  font-size: 24px;
+  color: white;
 }
