--- a/styles/enveloppe.css
+++ b/styles/enveloppe.css
@@ -102,6 +102,7 @@
   border-radius: 20px;
   top: 50%;
   left: 50%;
+  max-height: 80%;
   transform: translate(-50%, -50%);
   width: 80%;
   max-width: 400px;
@@ -109,7 +110,9 @@
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  display: none; /* Cache la modale par défaut */
+  display: none;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 #modaleCreation form {
@@ -199,7 +202,9 @@
 
 .logos {
   display: flex;
-  flex-wrap: wrap;
+  overflow: hidden;
+  overflow-x: scroll;
+  padding-bottom: 5px;
 }
 
 .categorie:last-child {
